edition = "2023";

option go_package = "github.com/solidDoWant/backup-tool/pkg/grpc/gen/proto/backup-tool/postgres/v1;postgres_v1";

enum VarName {
  PGHOST = 0;
  PGPORT = 1;
  PGDATABASE = 2;
  PGUSER = 3;
  PGREQUIREAUTH = 4;
  PGSSLMODE = 5;
  PGSSLCERT = 6;
  PGSSLKEY = 7;
  PGSSLROOTCERT = 8;
}

message EnvironmentCredentials {
  message EnvironmentVariable {
    VarName name = 1;
    string value = 2;
  }
  repeated EnvironmentVariable credentials = 1;
}